Update workflow, gitignore, and localization files
Simplifies artifact upload steps in GitHub Actions workflow, adds .idea/ to .gitignore, and updates the Arabic localization file to use Unicode escape sequences. Also includes minor formatting changes in MANIFEST.MF. No functional code changes in source files.